--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,3 @@
-@import 'styles/pages/home/homepage' 
+@import 'styles/pages/home/homepage';
+@import 'styles/components/collection';
+@import 'styles/components/header';
