--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
-@import 'styles/pages/home/homepage';
+@import 'styles/pages/homepage';
+@import 'styles/pages/signin-up';
 @import 'styles/components/collection';
 @import 'styles/components/header';
+@import 'styles/components/form-components';
